glasskube/trieve/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trieve-server
spec:
  template:
    spec:
      containers:
        - name: server
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
          image: trieve/server
          ports:
            - containerPort: 8090
  selector: {}
