glasskube/trieve/server/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: trieve-server
spec:
  type: ClusterIP
  ports:
    - port: 8090
      name: server
