glasskube/trieve/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trieve-server
spec:
  rules:
    - host: api.localtrieve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trieve-server
                port:
                  name: server
